--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
       <p class="modal__description">
       </p>
       <div class="modal__genre-average">
-        <div class="modal__genres"></div>
+        <div class="modal__genres">
+          <div class="modal__genre"></div>
+         
+        </div>
         <div class="modal__average"></div>
       </div>
     </div>
